fix navbar on mobile + prep for inline article images

--- a/css/post.css
+++ b/css/post.css
@@ -18,6 +18,28 @@ h2.author {
     display: block;
 }
 
+#post-image-left-justify {
+  float: left;
+  padding-right: 16px;
+  max-width: 300px;
+  height: auto;
+}
+
+#post-image-center-justify {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
+  padding-bottom: 32px;
+}
+
+#post-image-right-justify {
+  float: right;
+  padding-left: 16px;
+  max-width: 300px;
+  height: auto;
+}
+
 .button {
     background-color: #FCD224;
     border: none;
